--- a/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
@@ -687,7 +687,7 @@ items:
   nameWithType: NSChatAgent.SaveChatTopicEntity(NSChatTopicEntity)
   fullName: CRMScript.NetServer.NSChatAgent.SaveChatTopicEntity(NSChatTopicEntity)
   type: Method
-  summary: "\nUpdates the existing NSChatTopicEntity or creates a new NSChatTopicEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>chatTopicEntity</strong>The NSChatTopicEntity to save.</li></ul><strong>Returns:</strong>NSChatTopicEntity<p></p>\n<pre><code>NSChat  agent;\nNSChatTopicEntity thing = agent.CreateDefaultChatTopicEntity();\nthing = agent.SaveChatTopicEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSChatTopicEntity or creates a new NSChatTopicEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>chatTopicEntity</strong>The NSChatTopicEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSChatTopicEntity SaveChatTopicEntity(NSChatTopicEntity chatTopicEntity)
