--- a/docs/api-reference/CRMScript.NetServer.NSDashboardAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardAgent.yml
@@ -332,7 +332,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSDashboardAgent.SaveDashboard()
   fullName: CRMScript.NetServer.NSDashboardAgent.SaveDashboard()
   type: Method
-  summary: "\nUpdates the existing NSDashboard or creates a new NSDashboard if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboard</strong>The NSDashboard to save.</li></ul><strong>Returns:</strong>NSDashboard<p></p>\n<pre><code>NSDashboard  agent;\nNSDashboard thing = agent.CreateDefaultDashboard();\nthing = agent.SaveDashboard(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSDashboard or creates a new NSDashboard if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboard</strong>The NSDashboard to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSDashboard SaveDashboard(NSDashboard dashboard)
@@ -351,7 +351,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSDashboardAgent.SaveDashboardTile()
   fullName: CRMScript.NetServer.NSDashboardAgent.SaveDashboardTile()
   type: Method
-  summary: "\nUpdates the existing NSDashboardTile or creates a new NSDashboardTile if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboardTile</strong>The NSDashboardTile to save.</li></ul><strong>Returns:</strong>NSDashboardTile<p></p>\n<pre><code>NSDashboard  agent;\nNSDashboardTile thing = agent.CreateDefaultDashboardTile();\nthing = agent.SaveDashboardTile(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSDashboardTile or creates a new NSDashboardTile if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboardTile</strong>The NSDashboardTile to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSDashboardTile SaveDashboardTile(NSDashboardTile dashboardTile)
