--- a/docs/api-reference/CRMScript.NetServer.NSDocument.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocument.yml
@@ -194,13 +194,14 @@ items:
   nameWithType: NSDocument.GetDocumentId()
   fullName: CRMScript.NetServer.NSDocument.GetDocumentId()
   type: Method
-  summary: "\nPrimary key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetDocumentId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: Primary key
   example: 
   - "\n<pre><code>NSDocument thing;\nInteger documentId = thing.GetDocumentId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocument.GetDocumentTemplate()
@@ -213,7 +214,7 @@ items:
   nameWithType: NSDocument.GetDocumentTemplate()
   fullName: CRMScript.NetServer.NSDocument.GetDocumentTemplate()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSDocument thing;\nString documentTemplate = thing.GetDocumentTemplate();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetDocumentTemplate()
