--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -1776,7 +1776,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSDocumentAgent.SaveDocumentEntity(NSDocumentEntity)
   fullName: CRMScript.NetServer.NSDocumentAgent.SaveDocumentEntity(NSDocumentEntity)
   type: Method
-  summary: "\nUpdates the existing NSDocumentEntity or creates a new NSDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>documentEntity</strong>The NSDocumentEntity to save.</li></ul><strong>Returns:</strong>NSDocumentEntity<p></p>\n<pre><code>NSDocument  agent;\nNSDocumentEntity thing = agent.CreateDefaultDocumentEntity();\nthing = agent.SaveDocumentEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSDocumentEntity or creates a new NSDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>documentEntity</strong>The NSDocumentEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSDocumentEntity SaveDocumentEntity(NSDocumentEntity documentEntity)
@@ -1854,7 +1854,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSDocumentAgent.SaveSuggestedDocumentEntity(NSSuggestedDocumentEntity)
   fullName: CRMScript.NetServer.NSDocumentAgent.SaveSuggestedDocumentEntity(NSSuggestedDocumentEntity)
   type: Method
-  summary: "\nUpdates the existing NSSuggestedDocumentEntity or creates a new NSSuggestedDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>suggestedDocumentEntity</strong>The NSSuggestedDocumentEntity to save.</li></ul><strong>Returns:</strong>NSSuggestedDocumentEntity<p></p>\n<pre><code>NSDocument  agent;\nNSSuggestedDocumentEntity thing = agent.CreateDefaultSuggestedDocumentEntity();\nthing = agent.SaveSuggestedDocumentEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSSuggestedDocumentEntity or creates a new NSSuggestedDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>suggestedDocumentEntity</strong>The NSSuggestedDocumentEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSSuggestedDocumentEntity SaveSuggestedDocumentEntity(NSSuggestedDocumentEntity suggestedDocumentEntity)
