--- a/docs/api-reference/CRMScript.NetServer.NSEMailAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailAgent.yml
@@ -2009,7 +2009,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSEMailAgent.SaveEMailAccount()
   fullName: CRMScript.NetServer.NSEMailAgent.SaveEMailAccount()
   type: Method
-  summary: "\nUpdates the existing NSEMailAccount or creates a new NSEMailAccount if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>eMailAccount</strong>The NSEMailAccount to save.</li></ul><strong>Returns:</strong>NSEMailAccount<p></p>\n<pre><code>NSEMail  agent;\nNSEMailAccount thing = agent.CreateDefaultEMailAccount();\nthing = agent.SaveEMailAccount(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSEMailAccount or creates a new NSEMailAccount if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>eMailAccount</strong>The NSEMailAccount to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSEMailAccount SaveEMailAccount(NSEMailAccount eMailAccount)
