--- a/docs/api-reference/CRMScript.NetServer.NSErpSyncAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpSyncAgent.yml
@@ -961,7 +961,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSErpSyncAgent.SaveErpSyncConnectorEntity(NSErpSyncConnectorEntity)
   fullName: CRMScript.NetServer.NSErpSyncAgent.SaveErpSyncConnectorEntity(NSErpSyncConnectorEntity)
   type: Method
-  summary: "\nUpdates the existing NSErpSyncConnectorEntity or creates a new NSErpSyncConnectorEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>erpSyncConnectorEntity</strong>The NSErpSyncConnectorEntity to save.</li></ul><strong>Returns:</strong>NSErpSyncConnectorEntity<p></p>\n<pre><code>NSErpSync  agent;\nNSErpSyncConnectorEntity thing = agent.CreateDefaultErpSyncConnectorEntity();\nthing = agent.SaveErpSyncConnectorEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSErpSyncConnectorEntity or creates a new NSErpSyncConnectorEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>erpSyncConnectorEntity</strong>The NSErpSyncConnectorEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSErpSyncConnectorEntity SaveErpSyncConnectorEntity(NSErpSyncConnectorEntity erpSyncConnectorEntity)
