--- a/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetAccumulatedNextCheckDate()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetAccumulatedNextCheckDate()
   type: Method
-  summary: "\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nDateTime accumulatedNextCheckDate = thing.GetAccumulatedNextCheckDate();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: DateTime GetAccumulatedNextCheckDate()
@@ -54,7 +54,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetCanBeActivated()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetCanBeActivated()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nBool canBeActivated = thing.GetCanBeActivated();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetCanBeActivated()
@@ -73,7 +73,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetCurrent()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetCurrent()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSLicenseInfo<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nNSLicenseInfo current = thing.GetCurrent();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSLicenseInfo GetCurrent()
@@ -111,7 +111,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetNew()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetNew()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSLicenseInfo<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nNSLicenseInfo new = thing.GetNew();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSLicenseInfo GetNew()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetReason()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetReason()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nString reason = thing.GetReason();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetReason()
