--- a/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSImportAgent.CreateErpImportData(String[],Integer,Integer)
   fullName: CRMScript.NetServer.NSImportAgent.CreateErpImportData(String[],Integer,Integer)
   type: Method
-  summary: "\nPopulates the ImportLines and columnDefs basedfrom erp system<p></p>\n<ul><li><strong>Restriction</strong>Archive restrictions.</li><li><strong>columns</strong>Columns.</li><li><strong>connectionId</strong>Connection id for Erp system</li><li><strong>erpActorType</strong>Erp Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul><strong>Returns:</strong>NSImportErpData<p></p>\n<pre><code>NSImportAgent agent;\nNSArchiveRestrictionInfo[] restriction;\nString[] columns;\nInteger connectionId;\nInteger erpActorType;\nNSImportErpData res = agent.CreateErpImportData(restriction, columns, connectionId, erpActorType);</code></pre>\n"
+  summary: "\nPopulates the ImportLines and columnDefs basedfrom erp system<p></p>\n<ul><li><strong>Restriction</strong>Archive restrictions.</li><li><strong>columns</strong>Columns.</li><li><strong>connectionId</strong>Connection id for Erp system</li><li><strong>erpActorType</strong>Erp Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>\n"
   remarks: 
   syntax: 
     content: NSImportErpData CreateErpImportData(NSArchiveRestrictionInfo[] restriction, String[] columns, Integer connectionId, Integer erpActorType)
