--- a/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSLicenseOwner.GetDescription()
   fullName: CRMScript.NetServer.NSLicenseOwner.GetDescription()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSLicenseOwner thing;\nString description = thing.GetDescription();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetDescription()
