--- a/docs/api-reference/CRMScript.NetServer.NSLicenseResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseResult.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSLicenseResult.GetReason()
   fullName: CRMScript.NetServer.NSLicenseResult.GetReason()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSLicenseResult thing;\nString reason = thing.GetReason();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetReason()
@@ -46,7 +46,7 @@ items:
   nameWithType: NSLicenseResult.GetSucceeded()
   fullName: CRMScript.NetServer.NSLicenseResult.GetSucceeded()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSLicenseResult thing;\nBool succeeded = thing.GetSucceeded();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetSucceeded()
