--- a/docs/api-reference/CRMScript.NetServer.NSMarketingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMarketingAgent.yml
@@ -374,7 +374,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSMarketingAgent.SaveFormEntity(NSFormEntity)
   fullName: CRMScript.NetServer.NSMarketingAgent.SaveFormEntity(NSFormEntity)
   type: Method
-  summary: "\nUpdates the existing NSFormEntity or creates a new NSFormEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formEntity</strong>The NSFormEntity to save.</li></ul><strong>Returns:</strong>NSFormEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSFormEntity thing = agent.CreateDefaultFormEntity();\nthing = agent.SaveFormEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSFormEntity or creates a new NSFormEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formEntity</strong>The NSFormEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSFormEntity SaveFormEntity(NSFormEntity formEntity)
@@ -396,7 +396,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSMarketingAgent.SaveFormSubmissionEntity(NSFormSubmissionEntity)
   fullName: CRMScript.NetServer.NSMarketingAgent.SaveFormSubmissionEntity(NSFormSubmissionEntity)
   type: Method
-  summary: "\nUpdates the existing NSFormSubmissionEntity or creates a new NSFormSubmissionEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formSubmissionEntity</strong>The NSFormSubmissionEntity to save.</li></ul><strong>Returns:</strong>NSFormSubmissionEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSFormSubmissionEntity thing = agent.CreateDefaultFormSubmissionEntity();\nthing = agent.SaveFormSubmissionEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSFormSubmissionEntity or creates a new NSFormSubmissionEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formSubmissionEntity</strong>The NSFormSubmissionEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSFormSubmissionEntity SaveFormSubmissionEntity(NSFormSubmissionEntity formSubmissionEntity)
@@ -418,7 +418,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSMarketingAgent.SaveShipmentMessageBlockEntity()
   fullName: CRMScript.NetServer.NSMarketingAgent.SaveShipmentMessageBlockEntity()
   type: Method
-  summary: "\nUpdates the existing NSShipmentMessageBlockEntity or creates a new NSShipmentMessageBlockEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageBlockEntity</strong>The NSShipmentMessageBlockEntity to save.</li></ul><strong>Returns:</strong>NSShipmentMessageBlockEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSShipmentMessageBlockEntity thing = agent.CreateDefaultShipmentMessageBlockEntity();\nthing = agent.SaveShipmentMessageBlockEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSShipmentMessageBlockEntity or creates a new NSShipmentMessageBlockEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageBlockEntity</strong>The NSShipmentMessageBlockEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageBlockEntity SaveShipmentMessageBlockEntity(NSShipmentMessageBlockEntity shipmentMessageBlockEntity)
@@ -437,7 +437,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSMarketingAgent.SaveShipmentMessageEntity()
   fullName: CRMScript.NetServer.NSMarketingAgent.SaveShipmentMessageEntity()
   type: Method
-  summary: "\nUpdates the existing NSShipmentMessageEntity or creates a new NSShipmentMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageEntity</strong>The NSShipmentMessageEntity to save.</li></ul><strong>Returns:</strong>NSShipmentMessageEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSShipmentMessageEntity thing = agent.CreateDefaultShipmentMessageEntity();\nthing = agent.SaveShipmentMessageEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSShipmentMessageEntity or creates a new NSShipmentMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageEntity</strong>The NSShipmentMessageEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageEntity SaveShipmentMessageEntity(NSShipmentMessageEntity shipmentMessageEntity)
