--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
@@ -201,7 +201,7 @@ items:
   nameWithType: NSModuleLicenseLink.GetPrerequisiteModuleName()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetPrerequisiteModuleName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSModuleLicenseLink thing;\nString prerequisiteModuleName = thing.GetPrerequisiteModuleName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetPrerequisiteModuleName()
@@ -220,7 +220,7 @@ items:
   nameWithType: NSModuleLicenseLink.GetSortOrder()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetSortOrder()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSModuleLicenseLink thing;\nInteger sortOrder = thing.GetSortOrder();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetSortOrder()
