--- a/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
@@ -90,7 +90,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSNumberAllocationAgent.GetRefCountEntity(Integer)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.GetRefCountEntity(Integer)
   type: Method
-  summary: "\nGets an NSRefCountEntity object.<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identifier of the NSRefCountEntity object</li></ul><strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocationAgent agent;\nNSRefCountEntity thing = agent.GetRefCountEntity(123);</code></pre>\n"
+  summary: "\nGets an NSRefCountEntity object.<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identifier of the NSRefCountEntity object</li></ul>\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity GetRefCountEntity(Integer refCountEntityId)
@@ -148,7 +148,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSNumberAllocationAgent.SaveRefCountEntity(NSRefCountEntity)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.SaveRefCountEntity(NSRefCountEntity)
   type: Method
-  summary: "\nUpdates the existing NSRefCountEntity or creates a new NSRefCountEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>refCountEntity</strong>The NSRefCountEntity to save.</li></ul><strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocation  agent;\nNSRefCountEntity thing = agent.CreateDefaultRefCountEntity();\nthing = agent.SaveRefCountEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSRefCountEntity or creates a new NSRefCountEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>refCountEntity</strong>The NSRefCountEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity SaveRefCountEntity(NSRefCountEntity refCountEntity)
