--- a/docs/api-reference/CRMScript.NetServer.NSOperationInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSOperationInfo.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSOperationInfo.GetEncodedDisplayName()
   fullName: CRMScript.NetServer.NSOperationInfo.GetEncodedDisplayName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSOperationInfo thing;\nString encodedDisplayName = thing.GetEncodedDisplayName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetEncodedDisplayName()
@@ -67,7 +67,7 @@ items:
   nameWithType: NSOperationInfo.GetKey()
   fullName: CRMScript.NetServer.NSOperationInfo.GetKey()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSOperationInfo thing;\nString key = thing.GetKey();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetKey()
