--- a/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
@@ -111,7 +111,7 @@ items:
   nameWithType: NSOutgoingMessage.GetSuggestedSessionKey()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetSuggestedSessionKey()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSOutgoingMessage thing;\nString suggestedSessionKey = thing.GetSuggestedSessionKey();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetSuggestedSessionKey()
