--- a/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
@@ -127,7 +127,7 @@ items:
   nameWithType: NSParticipantSyncData.GetContactCountry()
   fullName: CRMScript.NetServer.NSParticipantSyncData.GetContactCountry()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSParticipantSyncData thing;\nString contactCountry = thing.GetContactCountry();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetContactCountry()
@@ -165,7 +165,7 @@ items:
   nameWithType: NSParticipantSyncData.GetContactFullName()
   fullName: CRMScript.NetServer.NSParticipantSyncData.GetContactFullName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSParticipantSyncData thing;\nString contactFullName = thing.GetContactFullName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetContactFullName()
@@ -336,7 +336,7 @@ items:
   nameWithType: NSParticipantSyncData.GetPersonAddress()
   fullName: CRMScript.NetServer.NSParticipantSyncData.GetPersonAddress()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAddressSyncData<p></p>\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData personAddress = thing.GetPersonAddress();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAddressSyncData GetPersonAddress()
@@ -640,7 +640,7 @@ items:
   nameWithType: NSParticipantSyncData.GetPostalAddress()
   fullName: CRMScript.NetServer.NSParticipantSyncData.GetPostalAddress()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAddressSyncData<p></p>\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData postalAddress = thing.GetPostalAddress();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAddressSyncData GetPostalAddress()
@@ -659,7 +659,7 @@ items:
   nameWithType: NSParticipantSyncData.GetStreetAddress()
   fullName: CRMScript.NetServer.NSParticipantSyncData.GetStreetAddress()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAddressSyncData<p></p>\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData streetAddress = thing.GetStreetAddress();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAddressSyncData GetStreetAddress()
