--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -1051,7 +1051,7 @@ items:
   nameWithType: NSPersonAgent.SaveConsentPerson(NSConsentPerson)
   fullName: CRMScript.NetServer.NSPersonAgent.SaveConsentPerson(NSConsentPerson)
   type: Method
-  summary: "\nUpdates the existing NSConsentPerson or creates a new NSConsentPerson if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>consentPerson</strong>The NSConsentPerson to save.</li></ul><strong>Returns:</strong>NSConsentPerson<p></p>\n<pre><code>NSPerson  agent;\nNSConsentPerson thing = agent.CreateDefaultConsentPerson();\nthing = agent.SaveConsentPerson(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSConsentPerson or creates a new NSConsentPerson if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>consentPerson</strong>The NSConsentPerson to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSConsentPerson SaveConsentPerson(NSConsentPerson consentPerson)
