--- a/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSPocketStartupData.GetBaseLocaleTimeZoneData()
   fullName: CRMScript.NetServer.NSPocketStartupData.GetBaseLocaleTimeZoneData()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSTimeZoneData<p></p>\n<pre><code>NSPocketStartupData thing;\nNSTimeZoneData baseLocaleTimeZoneData = thing.GetBaseLocaleTimeZoneData();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSTimeZoneData GetBaseLocaleTimeZoneData()
@@ -136,7 +136,7 @@ items:
   nameWithType: NSPocketStartupData.GetPhoneLocaleTimeZoneData()
   fullName: CRMScript.NetServer.NSPocketStartupData.GetPhoneLocaleTimeZoneData()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSTimeZoneData<p></p>\n<pre><code>NSPocketStartupData thing;\nNSTimeZoneData phoneLocaleTimeZoneData = thing.GetPhoneLocaleTimeZoneData();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSTimeZoneData GetPhoneLocaleTimeZoneData()
