--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
@@ -689,7 +689,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSPreferenceAgent.SavePreferenceDescription(NSPreferenceDescription)
   fullName: CRMScript.NetServer.NSPreferenceAgent.SavePreferenceDescription(NSPreferenceDescription)
   type: Method
-  summary: "\nUpdates the existing NSPreferenceDescription or creates a new NSPreferenceDescription if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescription</strong>The NSPreferenceDescription to save.</li></ul><strong>Returns:</strong>NSPreferenceDescription<p></p>\n<pre><code>NSPreference  agent;\nNSPreferenceDescription thing = agent.CreateDefaultPreferenceDescription();\nthing = agent.SavePreferenceDescription(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSPreferenceDescription or creates a new NSPreferenceDescription if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescription</strong>The NSPreferenceDescription to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSPreferenceDescription SavePreferenceDescription(NSPreferenceDescription preferenceDescription)
@@ -711,7 +711,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSPreferenceAgent.SavePreferenceDescriptionLine(NSPreferenceDescriptionLine)
   fullName: CRMScript.NetServer.NSPreferenceAgent.SavePreferenceDescriptionLine(NSPreferenceDescriptionLine)
   type: Method
-  summary: "\nUpdates the existing NSPreferenceDescriptionLine or creates a new NSPreferenceDescriptionLine if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescriptionLine</strong>The NSPreferenceDescriptionLine to save.</li></ul><strong>Returns:</strong>NSPreferenceDescriptionLine<p></p>\n<pre><code>NSPreference  agent;\nNSPreferenceDescriptionLine thing = agent.CreateDefaultPreferenceDescriptionLine();\nthing = agent.SavePreferenceDescriptionLine(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSPreferenceDescriptionLine or creates a new NSPreferenceDescriptionLine if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescriptionLine</strong>The NSPreferenceDescriptionLine to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSPreferenceDescriptionLine SavePreferenceDescriptionLine(NSPreferenceDescriptionLine preferenceDescriptionLine)
