--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -1024,7 +1024,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSProjectAgent.SaveProjectMember(NSProjectMember)
   fullName: CRMScript.NetServer.NSProjectAgent.SaveProjectMember(NSProjectMember)
   type: Method
-  summary: "\nUpdates the existing NSProjectMember or creates a new NSProjectMember if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>projectMember</strong>The NSProjectMember to save.</li></ul><strong>Returns:</strong>NSProjectMember<p></p>\n<pre><code>NSProject  agent;\nNSProjectMember thing = agent.CreateDefaultProjectMember();\nthing = agent.SaveProjectMember(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSProjectMember or creates a new NSProjectMember if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>projectMember</strong>The NSProjectMember to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSProjectMember SaveProjectMember(NSProjectMember projectMember)
