--- a/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
@@ -197,7 +197,7 @@ items:
   nameWithType: NSProjectEventEntity.GetIsVisibleForCategories()
   fullName: CRMScript.NetServer.NSProjectEventEntity.GetIsVisibleForCategories()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSProjectEventEntity thing;\nBool isVisibleForCategories = thing.GetIsVisibleForCategories();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsVisibleForCategories()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSProjectEventEntity.GetIsVisibleForMembers()
   fullName: CRMScript.NetServer.NSProjectEventEntity.GetIsVisibleForMembers()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSProjectEventEntity thing;\nBool isVisibleForMembers = thing.GetIsVisibleForMembers();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsVisibleForMembers()
@@ -235,7 +235,7 @@ items:
   nameWithType: NSProjectEventEntity.GetIsVisibleForPersonInterests()
   fullName: CRMScript.NetServer.NSProjectEventEntity.GetIsVisibleForPersonInterests()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSProjectEventEntity thing;\nBool isVisibleForPersonInterests = thing.GetIsVisibleForPersonInterests();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsVisibleForPersonInterests()
