--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
@@ -1956,7 +1956,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSQuoteAgent.SavePriceList(NSPriceList)
   fullName: CRMScript.NetServer.NSQuoteAgent.SavePriceList(NSPriceList)
   type: Method
-  summary: "\nUpdates the existing NSPriceList or creates a new NSPriceList if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>priceList</strong>The NSPriceList to save.</li></ul><strong>Returns:</strong>NSPriceList<p></p>\n<pre><code>NSQuote  agent;\nNSPriceList thing = agent.CreateDefaultPriceList();\nthing = agent.SavePriceList(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSPriceList or creates a new NSPriceList if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>priceList</strong>The NSPriceList to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSPriceList SavePriceList(NSPriceList priceList)
@@ -1978,7 +1978,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSQuoteAgent.SaveProduct(NSProduct)
   fullName: CRMScript.NetServer.NSQuoteAgent.SaveProduct(NSProduct)
   type: Method
-  summary: "\nUpdates the existing NSProduct or creates a new NSProduct if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>product</strong>The NSProduct to save.</li></ul><strong>Returns:</strong>NSProduct<p></p>\n<pre><code>NSQuote  agent;\nNSProduct thing = agent.CreateDefaultProduct();\nthing = agent.SaveProduct(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSProduct or creates a new NSProduct if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>product</strong>The NSProduct to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSProduct SaveProduct(NSProduct product)
@@ -2022,7 +2022,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSQuoteAgent.SaveQuoteAlternative()
   fullName: CRMScript.NetServer.NSQuoteAgent.SaveQuoteAlternative()
   type: Method
-  summary: "\nUpdates the existing NSQuoteAlternative or creates a new NSQuoteAlternative if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>quoteAlternative</strong>The NSQuoteAlternative to save.</li></ul><strong>Returns:</strong>NSQuoteAlternative<p></p>\n<pre><code>NSQuoteAgent agent;\nNSQuoteAlternative thing = agent.CreateDefaultQuoteAlternative();\nthing = agent.SaveQuoteAlternative(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSQuoteAlternative or creates a new NSQuoteAlternative if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>quoteAlternative</strong>The NSQuoteAlternative to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSQuoteAlternative SaveQuoteAlternative(NSQuoteAlternative quoteAlternative)
