--- a/docs/api-reference/CRMScript.NetServer.NSSaintAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaintAgent.yml
@@ -263,7 +263,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSSaintAgent.SaveSaintConfiguration()
   fullName: CRMScript.NetServer.NSSaintAgent.SaveSaintConfiguration()
   type: Method
-  summary: "\nUpdates the existing NSSaintConfiguration or creates a new NSSaintConfiguration if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saintConfiguration</strong>The NSSaintConfiguration to save.</li></ul><strong>Returns:</strong>NSSaintConfiguration<p></p>\n<pre><code>NSSaint  agent;\nNSSaintConfiguration thing = agent.CreateDefaultSaintConfiguration();\nthing = agent.SaveSaintConfiguration(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSSaintConfiguration or creates a new NSSaintConfiguration if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saintConfiguration</strong>The NSSaintConfiguration to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSSaintConfiguration SaveSaintConfiguration(NSSaintConfiguration saintConfiguration)
@@ -282,7 +282,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSSaintAgent.SaveStatusMonitor()
   fullName: CRMScript.NetServer.NSSaintAgent.SaveStatusMonitor()
   type: Method
-  summary: "\nUpdates the existing NSStatusMonitor or creates a new NSStatusMonitor if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitor</strong>The NSStatusMonitor to save.</li></ul><strong>Returns:</strong>NSStatusMonitor<p></p>\n<pre><code>NSSaint  agent;\nNSStatusMonitor thing = agent.CreateDefaultStatusMonitor();\nthing = agent.SaveStatusMonitor(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSStatusMonitor or creates a new NSStatusMonitor if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitor</strong>The NSStatusMonitor to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSStatusMonitor SaveStatusMonitor(NSStatusMonitor statusMonitor)
@@ -301,7 +301,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSSaintAgent.SaveStatusMonitorPeriods()
   fullName: CRMScript.NetServer.NSSaintAgent.SaveStatusMonitorPeriods()
   type: Method
-  summary: "\nUpdates the existing NSStatusMonitorPeriods or creates a new NSStatusMonitorPeriods if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitorPeriods</strong>The NSStatusMonitorPeriods to save.</li></ul><strong>Returns:</strong>NSStatusMonitorPeriods<p></p>\n<pre><code>NSSaint  agent;\nNSStatusMonitorPeriods thing = agent.CreateDefaultStatusMonitorPeriods();\nthing = agent.SaveStatusMonitorPeriods(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSStatusMonitorPeriods or creates a new NSStatusMonitorPeriods if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitorPeriods</strong>The NSStatusMonitorPeriods to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSStatusMonitorPeriods SaveStatusMonitorPeriods(NSStatusMonitorPeriods statusMonitorPeriods)
