--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -814,7 +814,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSSaleAgent.SaveSaleStakeholder()
   fullName: CRMScript.NetServer.NSSaleAgent.SaveSaleStakeholder()
   type: Method
-  summary: "\nUpdates the existing NSSaleStakeholder or creates a new NSSaleStakeholder if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saleStakeholder</strong>The NSSaleStakeholder to save.</li></ul><strong>Returns:</strong>NSSaleStakeholder<p></p>\n<pre><code>NSSale  agent;\nNSSaleStakeholder thing = agent.CreateDefaultSaleStakeholder();\nthing = agent.SaveSaleStakeholder(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSSaleStakeholder or creates a new NSSaleStakeholder if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saleStakeholder</strong>The NSSaleStakeholder to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSSaleStakeholder SaveSaleStakeholder(NSSaleStakeholder saleStakeholder)
