--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -168,7 +168,7 @@ items:
   nameWithType: NSSaleEntity.GetAppointment()
   fullName: CRMScript.NetServer.NSSaleEntity.GetAppointment()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAppointment<p></p>\n<pre><code>NSSaleEntity thing;\nNSAppointment appointment = thing.GetAppointment();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAppointment GetAppointment()
@@ -677,7 +677,7 @@ items:
   nameWithType: NSSaleEntity.GetReasonSold()
   fullName: CRMScript.NetServer.NSSaleEntity.GetReasonSold()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSReasonSold<p></p>\n<pre><code>NSSaleEntity thing;\nNSReasonSold reasonSold = thing.GetReasonSold();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSReasonSold GetReasonSold()
@@ -696,7 +696,7 @@ items:
   nameWithType: NSSaleEntity.GetReasonStalled()
   fullName: CRMScript.NetServer.NSSaleEntity.GetReasonStalled()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSReasonStalled<p></p>\n<pre><code>NSSaleEntity thing;\nNSReasonStalled reasonStalled = thing.GetReasonStalled();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSReasonStalled GetReasonStalled()
@@ -810,7 +810,7 @@ items:
   nameWithType: NSSaleEntity.GetSaleType()
   fullName: CRMScript.NetServer.NSSaleEntity.GetSaleType()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSSaleType<p></p>\n<pre><code>NSSaleEntity thing;\nNSSaleType saleType = thing.GetSaleType();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSSaleType GetSaleType()
