--- a/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSatellite.GetArea()
   fullName: CRMScript.NetServer.NSSatellite.GetArea()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSArea<p></p>\n<pre><code>NSSatellite thing;\nNSArea area = thing.GetArea();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSArea GetArea()
@@ -58,7 +58,7 @@ items:
   nameWithType: NSSatellite.GetContact()
   fullName: CRMScript.NetServer.NSSatellite.GetContact()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSContact<p></p>\n<pre><code>NSSatellite thing;\nNSContact contact = thing.GetContact();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSContact GetContact()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSSatellite.GetCreatedBy()
   fullName: CRMScript.NetServer.NSSatellite.GetCreatedBy()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAssociate<p></p>\n<pre><code>NSSatellite thing;\nNSAssociate createdBy = thing.GetCreatedBy();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAssociate GetCreatedBy()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSSatellite.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSSatellite.GetUpdatedBy()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAssociate<p></p>\n<pre><code>NSSatellite thing;\nNSAssociate updatedBy = thing.GetUpdatedBy();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAssociate GetUpdatedBy()
