--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -493,7 +493,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSTicketAgent.SaveAttachmentEntity()
   fullName: CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity()
   type: Method
-  summary: "\nUpdates the existing NSAttachmentEntity or creates a new NSAttachmentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>attachmentEntity</strong>The NSAttachmentEntity to save.</li></ul><strong>Returns:</strong>NSAttachmentEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSAttachmentEntity thing = agent.CreateDefaultAttachmentEntity();\nthing = agent.SaveAttachmentEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSAttachmentEntity or creates a new NSAttachmentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>attachmentEntity</strong>The NSAttachmentEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSAttachmentEntity SaveAttachmentEntity(NSAttachmentEntity attachmentEntity)
@@ -512,7 +512,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSTicketAgent.SaveTicketEntity(NSTicketEntity)
   fullName: CRMScript.NetServer.NSTicketAgent.SaveTicketEntity(NSTicketEntity)
   type: Method
-  summary: "\nUpdates the existing NSTicketEntity or creates a new NSTicketEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketEntity</strong>The NSTicketEntity to save.</li></ul><strong>Returns:</strong>NNSTicketEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketEntity thing = agent.CreateDefaultTicketEntity();\nthing = agent.SaveTicketEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSTicketEntity or creates a new NSTicketEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketEntity</strong>The NSTicketEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSTicketEntity SaveTicketEntity(NSTicketEntity ticketEntity)
@@ -534,7 +534,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSTicketAgent.SaveTicketMessageEntity()
   fullName: CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity()
   type: Method
-  summary: "\nUpdates the existing NSTicketMessageEntity or creates a new NSTicketMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketMessageEntity</strong>The NSTicketMessageEntity to save.</li></ul><strong>Returns:</strong>NSTicketMessageEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketMessageEntity thing = agent.CreateDefaultTicketMessageEntity();\nthing = agent.SaveTicketMessageEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSTicketMessageEntity or creates a new NSTicketMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketMessageEntity</strong>The NSTicketMessageEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSTicketMessageEntity SaveTicketMessageEntity(NSTicketMessageEntity ticketMessageEntity)
