--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSTimeZoneData.GetIsoNumber()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetIsoNumber()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTimeZoneData thing;\nInteger isoNumber = thing.GetIsoNumber();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetIsoNumber()
