--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -1860,7 +1860,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSUserAgent.SaveRoleEntity(NSRoleEntity)
   fullName: CRMScript.NetServer.NSUserAgent.SaveRoleEntity(NSRoleEntity)
   type: Method
-  summary: "\nUpdates the existing NSRoleEntity or creates a new NSRoleEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>roleEntity</strong>The NSRoleEntity to save.</li></ul><strong>Returns:</strong>NSRoleEntity<p></p>\n<pre><code>NSUser  agent;\nNSRoleEntity thing = agent.CreateDefaultRoleEntity();\nthing = agent.SaveRoleEntity(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSRoleEntity or creates a new NSRoleEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>roleEntity</strong>The NSRoleEntity to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSRoleEntity SaveRoleEntity(NSRoleEntity roleEntity)
@@ -1882,7 +1882,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSUserAgent.SaveServiceAuth()
   fullName: CRMScript.NetServer.NSUserAgent.SaveServiceAuth()
   type: Method
-  summary: "\nUpdates the existing NSServiceAuth or creates a new NSServiceAuth if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>serviceAuth</strong>The NSServiceAuth to save.</li></ul><strong>Returns:</strong>NSServiceAuth<p></p>\n<pre><code>NSUser  agent;\nNSServiceAuth thing = agent.CreateDefaultServiceAuth();\nthing = agent.SaveServiceAuth(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSServiceAuth or creates a new NSServiceAuth if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>serviceAuth</strong>The NSServiceAuth to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSServiceAuth SaveServiceAuth(NSServiceAuth serviceAuth)
@@ -1942,7 +1942,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   nameWithType: NSUserAgent.SaveUser(NSUser)
   fullName: CRMScript.NetServer.NSUserAgent.SaveUser(NSUser)
   type: Method
-  summary: "\nUpdates the existing NSUser or creates a new NSUser if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>user</strong>The NSUser to save.</li></ul><strong>Returns:</strong>NSUser<p></p>\n<pre><code>NSUser  agent;\nNSUser thing = agent.CreateDefaultUser();\nthing = agent.SaveUser(thing);</code></pre>\n"
+  summary: "\nUpdates the existing NSUser or creates a new NSUser if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>user</strong>The NSUser to save.</li></ul>\n"
   remarks: 
   syntax: 
     content: NSUser SaveUser(NSUser user)
