--- a/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSUserValidationResult.GetReason()
   fullName: CRMScript.NetServer.NSUserValidationResult.GetReason()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSUserValidationResult thing;\nString reason = thing.GetReason();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetReason()
@@ -46,7 +46,7 @@ items:
   nameWithType: NSUserValidationResult.GetResult()
   fullName: CRMScript.NetServer.NSUserValidationResult.GetResult()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSUserValidationResult thing;\nBool result = thing.GetResult();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetResult()
