--- a/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSDataRight.GetDescription()
   fullName: CRMScript.NetServer.NSDataRight.GetDescription()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSDataRight thing;\nString description = thing.GetDescription();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -46,7 +46,7 @@ items:
   nameWithType: NSDataRight.GetValue()
   fullName: CRMScript.NetServer.NSDataRight.GetValue()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSDataRight thing;\nString value = thing.GetValue();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetValue()
