--- a/docs/api-reference/CRMScript.NetServer.NSEMailAddress.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailAddress.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSEMailAddress.GetAddress()
   fullName: CRMScript.NetServer.NSEMailAddress.GetAddress()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSEMailAddress thing;\nString address = thing.GetAddress();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetAddress()
@@ -98,7 +98,7 @@ items:
   nameWithType: NSEMailAddress.GetContactName()
   fullName: CRMScript.NetServer.NSEMailAddress.GetContactName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSEMailAddress thing;\nString contactName = thing.GetContactName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -193,7 +193,7 @@ items:
   nameWithType: NSEMailAddress.GetPersonName()
   fullName: CRMScript.NetServer.NSEMailAddress.GetPersonName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSEMailAddress thing;\nString personName = thing.GetPersonName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetPersonName()
