--- a/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfoExtended.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfoExtended.yml
@@ -75,7 +75,7 @@ items:
   nameWithType: NSEMailConnectionInfoExtended.GetPort()
   fullName: CRMScript.NetServer.NSEMailConnectionInfoExtended.GetPort()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSEMailConnectionInfoExtended thing;\nInteger port = thing.GetPort();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetPort()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSEMailConnectionInfoExtended.GetProtocol()
   fullName: CRMScript.NetServer.NSEMailConnectionInfoExtended.GetProtocol()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSEMailConnectionInfoExtended thing;\nString protocol = thing.GetProtocol();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetProtocol()
