--- a/docs/api-reference/CRMScript.NetServer.NSFieldValueInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldValueInfo.yml
@@ -171,7 +171,7 @@ items:
   nameWithType: NSFieldValueInfo.GetEncodedDataCaption()
   fullName: CRMScript.NetServer.NSFieldValueInfo.GetEncodedDataCaption()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSFieldValueInfo thing;\nString encodedDataCaption = thing.GetEncodedDataCaption();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetEncodedDataCaption()
@@ -190,7 +190,7 @@ items:
   nameWithType: NSFieldValueInfo.GetEncodedDataCaptionDescription()
   fullName: CRMScript.NetServer.NSFieldValueInfo.GetEncodedDataCaptionDescription()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSFieldValueInfo thing;\nString encodedDataCaptionDescription = thing.GetEncodedDataCaptionDescription();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetEncodedDataCaptionDescription()
