--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
@@ -407,7 +407,7 @@ items:
   nameWithType: NSMailMergeSettings.GetSynchronous()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetSynchronous()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSMailMergeSettings thing;\nBool synchronous = thing.GetSynchronous();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetSynchronous()
