--- a/docs/api-reference/CRMScript.NetServer.NSMultiAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMultiAlarmData.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSMultiAlarmData.GetPollingInterval()
   fullName: CRMScript.NetServer.NSMultiAlarmData.GetPollingInterval()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSMultiAlarmData thing;\nInteger pollingInterval = thing.GetPollingInterval();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetPollingInterval()
@@ -67,7 +67,7 @@ items:
   nameWithType: NSMultiAlarmData.GetSilentAfter()
   fullName: CRMScript.NetServer.NSMultiAlarmData.GetSilentAfter()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSMultiAlarmData thing;\nInteger silentAfter = thing.GetSilentAfter();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetSilentAfter()
