--- a/docs/api-reference/CRMScript.NetServer.NSPersonEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonEntity.yml
@@ -450,7 +450,7 @@ items:
   nameWithType: NSPersonEntity.GetCustomerLanguage()
   fullName: CRMScript.NetServer.NSPersonEntity.GetCustomerLanguage()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSCustomerLanguage<p></p>\n<pre><code>NSPersonEntity thing;\nNSCustomerLanguage customerLanguage = thing.GetCustomerLanguage();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSCustomerLanguage GetCustomerLanguage()
@@ -1188,7 +1188,7 @@ items:
   nameWithType: NSPersonEntity.GetSupportAssociate()
   fullName: CRMScript.NetServer.NSPersonEntity.GetSupportAssociate()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSAssociate<p></p>\n<pre><code>NSPersonEntity thing;\nNSAssociate supportAssociate = thing.GetSupportAssociate();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSAssociate GetSupportAssociate()
@@ -1207,7 +1207,7 @@ items:
   nameWithType: NSPersonEntity.GetTicketPriority()
   fullName: CRMScript.NetServer.NSPersonEntity.GetTicketPriority()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSTicketPriority<p></p>\n<pre><code>NSPersonEntity thing;\nNSTicketPriority ticketPriority = thing.GetTicketPriority();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSTicketPriority GetTicketPriority()
