--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
@@ -195,7 +195,7 @@ items:
   nameWithType: NSPhoneListItem.GetTooltip()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetTooltip()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSPhoneListItem thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetTooltip()
