--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -197,7 +197,7 @@ items:
   nameWithType: NSPreference.GetTabOrder()
   fullName: CRMScript.NetServer.NSPreference.GetTabOrder()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSTabOrder<p></p>\n<pre><code>NSPreference thing;\nNSTabOrder tabOrder = thing.GetTabOrder();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSTabOrder GetTabOrder()
