--- a/docs/api-reference/CRMScript.NetServer.NSProject.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProject.yml
@@ -135,7 +135,7 @@ items:
   nameWithType: NSProject.GetIsPublished()
   fullName: CRMScript.NetServer.NSProject.GetIsPublished()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSProject thing;\nBool isPublished = thing.GetIsPublished();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsPublished()
@@ -325,7 +325,7 @@ items:
   nameWithType: NSProject.GetTypeId()
   fullName: CRMScript.NetServer.NSProject.GetTypeId()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSProject thing;\nInteger typeId = thing.GetTypeId();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetTypeId()
