--- a/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
@@ -53,7 +53,7 @@ items:
   nameWithType: NSUserInfo.GetCanLogon()
   fullName: CRMScript.NetServer.NSUserInfo.GetCanLogon()
   type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSUserInfo thing;\nBool canLogon = thing.GetCanLogon();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetCanLogon()
@@ -167,7 +167,7 @@ items:
   nameWithType: NSUserInfo.GetRoleName()
   fullName: CRMScript.NetServer.NSUserInfo.GetRoleName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSUserInfo thing;\nString roleName = thing.GetRoleName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetRoleName()
@@ -186,7 +186,7 @@ items:
   nameWithType: NSUserInfo.GetRoleTooltip()
   fullName: CRMScript.NetServer.NSUserInfo.GetRoleTooltip()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSUserInfo thing;\nString roleTooltip = thing.GetRoleTooltip();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetRoleTooltip()
@@ -243,7 +243,7 @@ items:
   nameWithType: NSUserInfo.GetUserGroupName()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserGroupName()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSUserInfo thing;\nString userGroupName = thing.GetUserGroupName();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetUserGroupName()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSUserInfo.GetUserGroupTooltip()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserGroupTooltip()
   type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSUserInfo thing;\nString userGroupTooltip = thing.GetUserGroupTooltip();</code></pre>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetUserGroupTooltip()
